src/test/resources/Parser/SyntaxErrors/AccessForbiddenClass2.front
private class B:
    static i: int32;